# doors

./: .firebaserc  .gitignore  MANIFEST.in  Pipfile  README.md  package-lock.json  package.json  project.toml  pyproject.toml  requirements.txt
.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
.github/workflows/: mcq_test_workflow.yml
assets/: devs.py  doors.txt
devs/: devs.py  player_board.py
public/: index.html
sandbox/doors_dir/: doors.py
src/: App.css  App.js  firebaseConfig.json
src/Authentication/: Login.js  SignOut.js
src/Components/: LoadingAnimation.js
src/Components/ProjectTask/: MapProjects.js  ProjectsComponent.js  Task.js
src/Firebase/: FetchData.js  Firebase.js  PostData.js
src/Navbar/: Navbar.js
src/Routes/Landing/: Landing.js
src/Routes/Projects/: Projects.js
src/Routes/User/: User.js
src/doors/: cli_parser.py  file_manager.py  main.py  mcq.json  mcq_courses.py  mcq_render.py
src/doors/assets/: door_name.json  render_door_graphic.py
src/doors/ciphers/: caesar_cipher.py  sha_encryption.py
src/doors/courses/: caesar_cipher.json  first_course.json  genesis.json
src/doors/doors_gameplay/: devs.py  game_mechanichs.py  generate.py  graphics.py  maze.py  play_game.py  player_board.py  render_door_graphic.py  render_door_graphic_ASCII.txt
src/doors/mcq_courses/: README.md  cool_quotes.json  mcq_courses.py  mcq_template.json  python_logic.json  python_math.json
src/doors/player/: player.py
tests/: test_caesar_cipher.py  test_course_json_format.py  test_mcq_courses.py
