[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[options]
include_package_data = true
package_dir = {"" = "src"}
packages = ["doors"]

[project]
name = "doors"
version = "0.1.0-alpha"
description = "Educational ed-tech game project"
requires-python = ">=3.9"
license = {file = "LICENSE"}
urls = {source = "https://github.com/kfmh/uw-chess"}

dependencies = [
    "rich==13.7.0",
    "tqdm==4.66.1",
]

[project.scripts]
doors = "doors.main:main"
